fix image align.

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,20 +22,18 @@ label {
   font-size: 150%;
 }
 
-}
-
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
   padding-bottom: 5%;
-  padding-top: 5%;
+  padding-top: 10%;
 }
 
 button {
   float: right;
-  margin-top: 4%
+  margin-top: 4%;
 }
 
 .speech-bubble {
@@ -43,7 +41,7 @@ button {
 	background: #9d0000;
 	border-radius: .4em;
   color: white;
-  padding: 3%
+  padding: 3%;
 }
 
 .speech-bubble:after {
